# Final_Project_Sp26

./: .gitignore  .gitmodules  Final_project_intro-v2.pptx  langgraph_architecture.html  pyproject.toml
MBA-course/: .config_trial_baseline_gpt4o.yaml  .env.example  config.yaml  langgraph.json  mba_agent_v1.py  mba_agent_v1_nb.py  mba_agent_v2_nb.py  mba_agent_v3_nb.py  mba_agent_v4.py  mba_agent_v4_colab.ipynb  mba_chainlit.py  run_trials.py
MBA-course/Design/: 0-Course-Project-Design.md  langgraph-agent-build-plan.md  requirements-v1.md
